--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <body>
     <div id="app">
       <div id="controlPanel">
-        <!-- <button id="sensor" title="sensor">🌐</button> -->
+        <button id="sensor" title="sensor">🌐</button>
         <button id="north" title="north">⬆️</button>
         <button id="south" title="south">⬇️</button>
         <button id="west" title="west">⬅️</button>
         <button id="east" title="east">➡️</button>
-        <!-- <button id="reset" title="reset">🚮</button> -->
+        <button id="reset" title="reset">🚮</button>
       </div>
-      <div id="statusPanel"></div>
+      <div id="statusPanel"><p>No presents yet...</p></div>
       <div id="map"></div>
     </div>
     <script type="module" src="/src/main.ts"></script>
